--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,33 @@ nav {
     text-align: center;
 }
 
+.content-2 {
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 64px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+.content-2 h2 {
+    border-bottom: 1px solid gray;
+}
+
+.content-2 h4 {
+    border-bottom: 1px solid gray;
+}
+
+.project{ 
+    margin-left: 64px;
+    margin-right: 64px;
+}
+
+.project p {
+    text-align: left;
+    font-family: 'Raleway';
+    font-size: 16px;
+}
+
 footer {
     background-color: #353942;
     color: white;
