--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,32 @@ nav {
 }
 
 nav h1 {
-    padding-left: 45%;
+    margin-left: 45%;
     margin-top: 0.5%;
     margin-bottom: 0.5%;
     font-family: 'Prompt';
     font-size: 20px;
+    width: 40%;
+}
+
+.nav-links {
+    display: flex;
+    align-items: flex-end;
+    list-style: none;
+    margin-top: 0.5%;
+    margin-bottom: 0.5%;
+    margin-right: 20px;
+}
+
+.nav-links li {
+    margin-right: 30px;
+    font-size: 18px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    border: 1 px rgb(100, 255, 218) solid;
+    border-radius: 5px;
 }
 
 #home {
@@ -47,7 +68,7 @@ nav h1 {
 #home a {
     margin-left: 35%;
     padding: 20px;
-    border: 1px cyan solid;
+    border: 1px rgb(100, 255, 218) solid;
     border-radius: 5px;
     font-size: 24px;
     color: #b1e5f2;
@@ -61,8 +82,8 @@ nav h1 {
 #about {
     color: #b1e5f2;
     background-color: #274c77;
-    padding-top: 50px;
-    padding-bottom: 75px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 #about h2 {
@@ -88,8 +109,13 @@ nav h1 {
     position: relative;
 }
 
+.inner {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
 #work {
-    padding-top: 50px;
+    padding-top: 100px;
     padding-bottom: 75px;
     background-color: #e7ecef;
     color: #274c77;
@@ -99,6 +125,84 @@ nav h1 {
     padding-bottom: 40px;
     text-align: center;
     font-family: 'Prompt'
+}
+
+.project {
+    width: 45%;
+    margin: 20px;
+    display: inline-block;
+    color: #b1e5f2;
+    background-color: #274c77;
+    border: 2px solid #6096ba;
+    border-radius: 5px;
+    position: relative;
+}
+
+.project-header {
+    padding-left: 10px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.project-header h3 {
+    font-family: 'Prompt';
+}
+
+.project-header i {
+    color: #b1e5f2;
+    padding-top: 10px;
+}
+
+.tags {
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 10px;
+    opacity: 75%;
+}
+
+.tags li {
+    margin-right: 15px;
+}
+
+.subdiv {
+    position: absolute;
+    bottom: 0;
+}
+
+a:link {
+    color: #b1e5f2;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #b1e5f2;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #b1e5f2;
+    text-decoration: none;
+    opacity: 50%;
+    background-color: #274c77;
+}
+
+a:active {
+    color: #b1e5f2;
+    text-decoration: none;
+}
+
+.links a {
+    margin-right: 15px;
+}
+
+.description {
+    padding: 10px;
+    font-style: 'Roboto';
+    font-size: 16px;
 }
 
 footer {
