--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,8 +110,8 @@ nav h1 {
 }
 
 .inner {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #work {
@@ -128,14 +128,16 @@ nav h1 {
 }
 
 .project {
-    width: 45%;
-    margin: 20px;
+    width: 400px;
+    margin-left: 15%;
+    margin-bottom: 5%;
     display: inline-block;
     color: #b1e5f2;
     background-color: #274c77;
     border: 2px solid #6096ba;
     border-radius: 5px;
     position: relative;
+    height: 250px;
 }
 
 .project-header {
@@ -203,6 +205,7 @@ a:active {
     padding: 10px;
     font-style: 'Roboto';
     font-size: 16px;
+    margin-bottom: 20px;
 }
 
 footer {
